--- a/cursos.html
+++ b/cursos.html
@@ -53,7 +53,7 @@
             </li>
 
             <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="apoio.html" class="nav-link">
                     <i class="fas fa-donate"></i>
                     <span>Apoiar o Criador</span>
                 </a>
