--- a/cursos.html
+++ b/cursos.html
@@ -40,6 +40,14 @@
                     <span>Cursos</span>
                 </a>
             </li>
+
+             <li class="nav-item">
+                <a href="apk.html" class="nav-link active" data-tooltip="APKs Premium">
+                   <i class="fa-solid fa-download"></i>
+                    <span>APKs</span>
+                </a>
+            </li>
+
             <li class="nav-item">
                 <a href="https://wa.me/5545988127886?text=Olá%2C%20gostaria%20de%20mais%20informações." class="nav-link"
                     target="_blank" data-tooltip="Suporte">
