--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
                 </a>
             </li>
 
+             <li class="nav-item">
+                <a href="apk.html" class="nav-link active" data-tooltip="APKs Premium">
+                    <i class="fa-solid fa-download"></i>
+                    <span>APKs</span>
+                </a>
+            </li>
+        
             <li class="nav-item">
                 <a href="https://wa.me/5545988127886" target="_blank" class="nav-link" data-tooltip="Suporte">
                     <i class="bi bi-person-fill"></i>
@@ -70,9 +77,9 @@
                     <span>Apoiar o Criador</span>
                 </a>
             </li>
-
+<!--https://discord.gg/GRWrj2w4vR-->
             <li class="nav-item">
-                <a href="https://discord.gg/GRWrj2w4vR" class="nav-link" data-tooltip="Pedir Curso">
+                <a href="apk.html" class="nav-link" data-tooltip="Pedir Curso">
                     <i class="fas fa-comment-dots"></i>
                     <span>Pedir Curso</span>
                 </a>
